--- a/templates/base.html
+++ b/templates/base.html
@@ -48,13 +48,12 @@ type:当前用户类型，1为买家，0为卖家
                     a.innerText = "Login";
                 }
                 user_box.append(a)
-
                 $(document).trigger("sessionLoaded");
-                get_user_image();
+                get_user_image(document.getElementById("user-image"));
             },
             error:function (){
                 $(document).trigger("sessionLoaded");
-                get_user_image();
+                get_user_image(document.getElementById("user-image"));
             }
         })
     }
@@ -74,7 +73,7 @@ type:当前用户类型，1为买家，0为卖家
 {#用户info#}
     <div class="user-box">
         <div class="user-img">
-            <img class="user-img">
+            <img src="" alt="" id="user-image">
         </div>
         <div class="user-name"></div>
     </div>
