--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@ login
             dataType: "json",
             success:function (response){
                 if(response.success){
-                    window.location.replace("/shop");
+                    history.back();
                 } else {
                     alert(response.message);
                 }
