--- a/templates/comment.html
+++ b/templates/comment.html
@@ -95,7 +95,7 @@
         self_rating_div.append(self_rating);
 
         const self_content_div = document.createElement("div");
-        const self_content = document.createElement("input");
+        const self_content = document.createElement("textarea");
 
         self_content_div.setAttribute("class", "self-content-box");
         self_content.setAttribute("class", "self-content");
