--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 register
 {% endblock %}
 
-{% block css %}/static/css/login.css{% endblock %}
+{% block css %}/static/css/register.css{% endblock %}
 
 {% block script %}
     <script>
