--- a/static/css/item.css
+++ b/static/css/item.css
@@ -1,6 +1,14 @@
+/*main {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    margin-top: 2rem;*/
+/*}*/
+
 /* 公共样式 */
-.comment-box,
-.self-comment-box {
+.left-box,
+.right-box {
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -8,26 +16,28 @@
     padding: 1rem;
     margin-left: 5%;
     margin-right: 5%;
+    height: 700px;
+    /*height: auto;*/
 }
 
-/* 用户自评论容器 */
-.self-comment-box {
-    flex: 3; /* 与.comment-box的比例为3:7 */
+
+.left-box {
+    flex: 5; /* 与.comment-box的比例为3:7 */
     display: flex;
     flex-direction: column;
     align-items: center; /* 水平居中 */
     justify-content: center; /* 垂直居中 */
+
 }
 
-/* 评论容器 */
-.comment-box {
-    flex: 7; /* 与.self-comment-box的比例为7:3 */
+
+.right-box {
+    flex: 5; /* 与.self-comment-box的比例为7:3 */
     position: relative;
-    height: 500px;
     overflow-y: auto; /* 超出部分y方向滚动 */
 }
 
-/* 评论窗口（默认隐藏） */
+
 .commenter-window {
     display: none;
     position: absolute;
@@ -38,57 +48,72 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* 评论和用户评论中的图片样式 */
-.comment-box img,
-.self-comment-box img {
+
+
+.right-box img {
     width: 50px;
     height: 50px;
     border-radius: 50%; /* 圆形图片 */
 }
 
-/* 评论和用户评论中的div容器样式 */
-.comment-box div,
-.self-comment-box div {
+.left-box img{
+
+    width: 120px;
+    height: 120px;
+    border-radius: 50%; /* 圆形图片 */
+}
+
+.img-box,
+.message-box,
+.operation-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 200px;
+}
+
+/*??????*/
+.comment-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.left-box div,
+.right-box div {
     margin: 0.5rem 1rem;
     background-color: #e6e6e6;
     padding: 0.5rem;
     border-radius: 8px;
 }
 
-/* 评论和用户评论中的span标签样式 */
-.comment-box span,
-.self-comment-box span {
+
+.left-box span,
+.right-box span {
     display: block;
     background-color: white;
     font-size: 1.25rem;
     padding: 0.5rem;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    word-wrap: break-word; /* 自动换行 */
-    overflow-wrap: break-word;
 }
 
-/* 用户评论中的输入框和文本区域样式 */
-.self-comment-box input,textarea {
+
+.left-box input {
     width: 90%;
     font-size: 1.125rem;
     margin: 1rem 0;
     border-radius: 5px;
-    resize: vertical; /* 允许垂直调整大小，禁止水平调整 */
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-}
-
-.self-comment-box input {
     height: 2rem;
 }
 
-.self-comment-box textarea {
-    height: 5rem;
-}
 
-/* 用户评论中的按钮样式 */
-.self-comment-box button {
+.left-box button,
+.right-box button
+{
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -97,12 +122,12 @@
     cursor: pointer; /* 手型指针 */
     font-size: 1.25rem;
     text-align: center;
-    margin-left: 1rem;
     transition: background-color 0.3s, color 0.3s; /* 过渡效果 */
 }
 
-/* 用户评论中的按钮鼠标悬停效果 */
-.self-comment-box button:hover {
+
+.left-box button:hover,
+.right-box button:hover{
     background-color: white;
     color: #007bff;
     font-style: italic;
