--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,22 +1,43 @@
-/*
-登录界面
- */
-.login-background-div .phone{
+/* 登录界面 */
+/* 主要容器的固定宽度和居中效果 */
+.login-background-div {
+    margin: 0 auto;
+
+    display: flex;           /* 设置为flex容器 */
+    justify-content: center; /* 水平居中 */
+    align-items: center;     /* 垂直居中 */
+    flex-direction: column;  /* 子元素垂直排列 */
+}
+
+.login-background-div .phone {
     margin-top: 50px;
 }
-.login-background-div input{
-    margin : 10px;
+
+.login-background-div input {
+    margin: 10px;
     height: 40px;
     width: 250px;
     font-size: 20px;
+    border-radius: 10px;
+    background: linear-gradient(to right, #f2f2f2, #e6e6e6);
+    border: black 2px solid; /* 统一黑色边框 */
+    transition: border-color 0.3s ease, background-color 0.3s ease; /* 统一过渡效果 */
 }
-.login-background-div .register a{
+
+.login-background-div .register a {
     margin-top: 10px;
     margin-bottom: 20px;
     margin-left: 10px;
     font-size: 20px;
+    color: #007bff;
+    transition: color 0.3s ease;
 }
-.login-background-div .submit button{
+
+.login-background-div .register a:hover {
+    color: orangered;
+}
+
+.login-background-div .submit button {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -27,53 +48,12 @@
     text-align: center;
     margin-left: 10px;
     margin-top: 20px;
+    background: linear-gradient(to right, #007bff, #0056b3);
+    transition: background-color 0.3s ease, color 0.3s ease; /* 统一过渡效果 */
 }
-.login-background-div .submit button:hover{
+
+.login-background-div .submit button:hover {
     background-color: white;
     color: #007bff;
     font-style: italic;
 }
-
-/*
-注册页面
- */
-.register-background-div label{
-    font-size: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-.user-type{
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-.phone input{
-    height: 30px;
-    width: 180px;
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-.password input{
-    height: 30px;
-    width: 180px;
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-.register-background-div .submit button{
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    padding: 15px 30px;
-    cursor: pointer;
-    font-size: 18px;
-    text-align: center;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-.register-background-div .submit button:hover{
-    background-color: white;
-    color: #007bff;
-    font-style: italic;
-}
-
-
