--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,9 @@ type:当前用户类型，1为买家，0为卖家
 <div class="top-box">
 {#LOGO#}
     <div class="logo-box">
+        <a href='/'>
         <img src="/static/img/Logo.jpeg" alt="LOGO">
+        </a>
     </div>
 {#可能的searchbox#}
     <div class="search-box">
