--- a/templates/item.html
+++ b/templates/item.html
@@ -4,6 +4,10 @@
 {{ product_id }}
 {% endblock %}
 
+{% block css %}
+/static/css/item.css
+{% endblock %}
+
 {% block script %}
     <script src="/static/js/render_comment.js"></script>
     <script>
@@ -78,10 +82,10 @@
             storage = document.createElement("span");
 
             img.setAttribute("src", data.image_src);
-            name.innerText = data.name;
-            rating.innerText = data.average_rating;
-            price.innerText = data.price;
-            storage.innerText = data.storage;
+            name.innerText ="Name: " + data.name;
+            rating.innerText ="Rating: " + data.average_rating;
+            price.innerText ="Price: " + data.price;
+            storage.innerText ="Storage: " + data.storage;
         }else {
             {#seller#}
             img = document.createElement("img");
@@ -93,24 +97,24 @@
             img.setAttribute("src", data.image_src);
 
             name.setAttribute("type", "text")
-            name.value = data.name;
+            name.value ="Name: " + data.name;
 
             rating.setAttribute("type", "text")
-            rating.value = data.average_rating;
+            rating.value ="Rating: " + data.average_rating;
 
             price.setAttribute("type", "text")
-            price.value = data.price;
+            price.value ="Price: " + data.price;
 
             storage.setAttribute("type", "text")
-            storage.value = data.storage;
+            storage.value ="Storage: " + data.storage;
 
         }
 
         $(".img-box").append(img);
-        $(".item-name").append(name);
-        $(".item-rating").append(rating);
-        $(".item-price").append(price);
-        $(".item-storage").append(storage);
+        $(".item-name-box").append(name);
+        $(".item-rating-box").append(rating);
+        $(".item-price-box").append(price);
+        $(".item-storage-box").append(storage);
     }
 
     function render_buyer_box() {
@@ -187,30 +191,18 @@
     <div class="img-box"></div>
     <div class="message-box">
         <div class="item-name-box">
-            <span>Name:</span>
-            <div class="item-name"></div>
         </div>
         <div class="item-rating-box">
-            <span>rating:</span>
-            <div class="item-rating"></div>
         </div>
         <div class="item-price-box">
-            <span>price:</span>
-            <div class="item-price"></div>
         </div>
         <div class="item-storage-box">
-            <span>storage:</span>
-            <div class="item-storage"></div>
         </div>
 
     </div>
     <div class="operation-box">
         <div class="buy-operation">
             <div class="buy-box">
-            </div>
-        </div>
-        <div>
-            <div class="look-more-comment">
             </div>
         </div>
     </div>
