--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@ login
             dataType: "json",
             success:function (response){
                 if(response.success){
-                    window.location.href = "/shop"
+                    window.location.href = document.referrer
                 } else {
                     alert(response.message);
                 }
