--- a/templates/item.html
+++ b/templates/item.html
@@ -145,8 +145,7 @@
                 }
             })
         };
-        const buy_box = document.createElement("div");
-        $(".left-box").append(buy_box);
+        const buy_box = $(".buy-box");
         buy_box.append(buy_num);
         buy_box.append(buy_button);
     }
