--- a/static/css/base_begin.css
+++ b/static/css/base_begin.css
@@ -37,14 +37,22 @@
 }
 
 .back-button-box .back-button {
-    background: linear-gradient(to bottom, #007BFF, #0056B3);
+    background-color: #007bff;
+    color: #fff;
+    border: none;
     border-radius: 10px;
-    padding: 10px 20px; /* 按钮的padding */
-    transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s; /* 增加背景颜色的过渡 */
+    padding: 15px 30px;
+    cursor: pointer;
+    font-size: 20px;
+    text-align: center;
+    margin-left: 10px;
+    margin-top: 20px;
+    background: linear-gradient(to right, #007bff, #0056b3);
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .back-button-box .back-button:hover {
-    transform: translateY(-3px);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    background-color: #0056B3; /* 深蓝色作为hover效果 */
+    background-color: white;
+    color: #007bff;
+    font-style: italic;
 }
