--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,10 +1,9 @@
 /* 登录界面 */
-/* 主要容器的固定宽度和居中效果 */
 .login-background-div {
     margin: 0 auto;
 
     display: flex;           /* 设置为flex容器 */
-    justify-content: center; /* 水平居中 */
+
     align-items: center;     /* 垂直居中 */
     flex-direction: column;  /* 子元素垂直排列 */
 }
@@ -49,7 +48,7 @@
     margin-left: 10px;
     margin-top: 20px;
     background: linear-gradient(to right, #007bff, #0056b3);
-    transition: background-color 0.3s ease, color 0.3s ease; /* 统一过渡效果 */
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .login-background-div .submit button:hover {
