--- a/templates/login.html
+++ b/templates/login.html
@@ -42,11 +42,11 @@ login
 {% block right_box %}
 <div class="login-background-div">
     <div class="phone">
-        <input type="text" id="phone">
+        <input type="text" id="phone" placeholder="phone">
     </div>
 
     <div class="password">
-        <input type="password" id="password">
+        <input type="password" id="password" placeholder="password">
     </div>
 
     <div class="register">
