--- a/templates/register.html
+++ b/templates/register.html
@@ -46,13 +46,11 @@ register
     </div>
 
     <div class="phone">
-        <label for="phone">phone</label>
-        <input type="text" id="phone">
+        <input type="text" id="phone" placeholder="phone">
     </div>
 
     <div class="password">
-        <label for="password"></label>
-        <input type="password" id="password">
+        <input type="password" id="password" placeholder="password">
     </div>
 
     <div class="submit">
